src/test/deca/syntax/valid/If_test2.deca
// Description:
//    test du syntax de la condition if avec des expressions 2
//
// Resultats:
//   
//
// Historique:
//    cree le 22/01/2022

{
    
    if ("hi") {
        println("hello") ;
    }
}